# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  config.py  db.py  logger.py  utils.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
page_analyzer/utils/: config.py  db.py  parser.py  parsers.py  utils.py  validators.py
